--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -1,4 +1,4 @@
-name: k6 Load Test
+name: k6 Cloud Load Test
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - "**"
 
 jobs:
-  run-test:
+  run-cloud-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,7 +15,10 @@ jobs:
       - name: Setup K6
         uses: grafana/setup-k6-action@v1
 
-      - name: Run local k6 test
+      - name: Run k6 test (upload results)
         uses: grafana/run-k6-action@v1
+        env:
+          K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
+          K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
         with:
           path: test.js
