--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -22,3 +22,4 @@ jobs:
           K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
         with:
           path: test.js
+          cloud-run-locally: false
